2008-09-12 : Caisi Integrator has the ability to manage which demographics are linked together. (Ted)
2008-09-11 : Fixed error when correcting invoices duplicate codes can be created for ON billing (Randy,2105933)
2008-09-09 : Fixed bug with Report By Template with dates in Firefox 3 and Safari which only the bottom date param would work (Jay,2102612)
             Fixed bug with Clinic Admin page that would log the user out if they clicked on the page (Jay,2102572)
2008-09-07 : Added practitioner number field in provider settings. Added Practitioner number to signature of Rx pad. (Dan)
2008-09-06 : Changed current prescription description in consultation from the short version to the long version. (Jay,2097084)
2008-09-05 : Caisi Integrator now shares prevention data across facilities (Ted)
2008-09-03 : Add copy favorite prescriptions function (Toby)
2008-09-02 : Changed icd10 table to be supported by desease registry
2008-09-02 : Added support for adding caisi issues set as 'major' to desease registry
2008-08-27 : Added newsletter option to demographic (Randy)
2008-08-26 : Tagged repositiory with  B4_MULTIPLE-ECHARTS (Randy)
             Changed cme/encounter to work off of request scope forms in
             both CAISI and OSCAR  
2008-08-26 : Paste oscar messages into new encounter (Randy)             
2008-08-22 : Old CME has option to sort asc and desc now. (Ted)
2008-08-01 : detailed history of caisi integrator consent is viewable. (Ted)
2008-07-28 : caisi integrator uses ssl. (Ted)
2008-07-22 : caisi integrator supports referrals between facilities. (Ted)

---------------------------
Changes prior to 2008-07-17
---------------------------
PMM:

-Home and Logout buttons are now in the top right hand corner

-“Oscar Medical” the link used to bring you back to case management screen has been renamed, the link on the navigator bar is now called “Case Management”
